data/test/method_as_function/negative/0006.js
const axios = require('axios');
axios.get('https://petstore.swagger.io/v2/pets', {
    params: {
        tags: ['tag1', 2],
        limit: 10
    }
});